--- a/hello/package.json
+++ b/hello/package.json
@@ -18,6 +18,14 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^3.5.5",
-    "webpack-dev-server": "~2.7.1"
+    "webpack-dev-server": "~2.7.1",
+    "babel-preset-react": "~6.24.1",
+    "babel-preset-es2015": "~6.24.1",
+    "babel-loader": "~7.1.1",
+    "babel-core": "~6.26.0"
+  },
+  "dependencies": {
+    "react": "~15.6.1",
+    "react-dom": "~15.6.1"
   }
 }
