--- a/hello/package.json
+++ b/hello/package.json
@@ -17,11 +17,11 @@
   "author": "skyf",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.5.5",
+    "webpack": "~3.5.5",
     "webpack-dev-server": "~2.7.1",
     "babel-preset-react": "~6.24.1",
     "babel-preset-es2015": "~6.24.1",
-    "babel-loader": "~7.1.1",
+    "babel-loader": "~7.1.2",
     "babel-core": "~6.26.0"
   },
   "dependencies": {
