--- a/gulp-wpack-demo/package.json
+++ b/gulp-wpack-demo/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/gulp"
+    "build": "node_modules/.bin/gulp",
+    "dev": "node_modules/.bin/gulp dev"
   },
   "keywords": [
     "vuejs",
